kubernetes/k8s-development-vagrant-env/manifests/networking/external-dns/external-dns-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: external-dns-test
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - host: nginx-external-dns-test.external-dns-test.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: nginx-external-dns-test
          servicePort: 8080
